# PolSARproSimPlus

./: .gitignore  README.md  meson.build
docs/: PolSARproSim_codewalkthrough.pptx
example/: allometry.xml  forest.xml  run1.sar
include/: Allometrics.h  Attenuation.h  Branch.h  Complex.h  Cone.h  Crown.h  Cylinder.h  Drawing.h  Facet.h  GraphicIMage.h  GrgCyl.h  InfCyl.h  JLkp.h  Jnz.h  Leaf.h  LightingMaterials.h  MonteCarlo.h  Plane.h  PolSARproSim.h  PolSARproSim_Definitions.h  PolSARproSim_Direct_Ground.h  PolSARproSim_Forest.h  PolSARproSim_Procedures.h  PolSARproSim_Short_Vegi.h  PolSARproSim_Structures.h  Ray.h  RayCrownIntersection.h  Realisation.h  SarIMage.h  Spheroid.h  Tree.h  Trig.h  YLkp.h  bmpDefinitions.h  c33Matrix.h  c3Vector.h  d33Matrix.h  d3Vector.h  read_allometry.h  read_forest.h  (+3 more)
scripts/: pspsim_readforestXML.m  pspsim_writeforestXML.m
src/: Allometrics.c  Branch.c  Complex.c  Crown.c  Drawing.c  GrgCyl.c  Ground.c  Makefile  Makefile-zodiac  MonteCarlo.c  Perspective.c  PolSARproSim.c  PolSARproSim_Direct_Ground.c  PolSARproSim_FE_Kz.c  PolSARproSim_Forest.c  PolSARproSim_Procedures.c  PolSARproSim_Short_Vegi.c  RayCrownIntersection.c  Realisation.c  SarIMage.c  Shuffling.c  c3Vector.c  d3Vector.c  read_allometry.c  read_forest.c  read_parfile.c  soilsurface.c
src/attic/: matrix.c
